scrollbar going behind header fixed

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,7 +45,6 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
 }
 
 
@@ -53,7 +52,6 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   overflow-x: hidden;
 }
 
